# gdelt-benin

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
dashboard/: app.py
data/: Analyse_Globale_F.csv
data/processed/: GDELT_DATA_BENIN_2025-1.csv
docs/: resumer.docx
notebooks/: Challenge_GDELT_2026 (1).ipynb  Dashboard1.ipynb  final.ipynb
requirements/: base.in  base.txt  constraints.txt  dev.in  dev.txt  docs.txt  ml.txt  viz.in  viz.txt
src/analysis/: metrics.py
src/api/: dependencies.py  main.py
src/api/routers/: __init__.py  analytics.py  dashboard.py  gdelt.py  health.py
src/api/schemas/: gdelt.py
src/core/: __init__.py  config.py  constants.py
src/ingestion/: __init__.py  download.py  fetch.py  filter.py  loader.py  parse.py  pipeline.py
src/processing/: __init__.py  clean.py
tests/: __init__.py  test_analysis.py  test_clean.py  test_download.py  test_fetch.py  test_filter.py  test_loader.py  test_metrics.py  test_parse.py  test_pipeline.py
